# EquellePrograms

./: .gitignore  CMakeLists.txt  README.md  compile_script.sh
3dwell/: swinit  timesteps  twophase.param
CompiledSrc/: readme
EquelleSrc/: A_plus_B_times_C.equelle  EquelleExampleSnippets.equelle  HeatEq.equelle  Laplace.equelle  explicit_heateq.equelle  heateq.equelle  normal_debug.equelle  swe.equelle  twophase.equelle  twophase_debug.equelle
HeateqParams/: Makefile  dir_bnd.mat  dir_val.mat  heat.param  timesteps.mat
ParamFiles/: ApB.param  dir_val.mat  laplace.param  timesteps.mat  u_initial.mat
heateq/: createDirichlet.m  params.param  performanceTest.sh
swe_dryCrater/: shallowWater.param
swe_filledCrater/: case.param  shoreParam.param
